fix alignment for packages

--- a/src/silvatheme/silvacmsorg/static/css/silvacmsorg.css
+++ b/src/silvatheme/silvacmsorg/static/css/silvacmsorg.css
@@ -1067,5 +1067,5 @@ table.silvatable.list.package {
 }
 
 table.silvatable.list.package th {
-  text-align: left;
+  text-align: center;
 }
